Fix spacing on members page

--- a/src/sass/_globals.scss
+++ b/src/sass/_globals.scss
@@ -22,6 +22,9 @@ $widget-member-online: #43B581;
 $widget-member-idle: #FAA61A;
 $widget-member-dnd: #F04747;
 
+$copyright-height: 100;
+$header-height: 72;
+
 @mixin background-opacity($color, $opacity: 0.3) {
     background: $color; /* The Fallback */
     background: rgba($color, $opacity);
@@ -49,6 +52,7 @@ body {
 .spl-header {
     background-color: $color-pallette-dark-blue !important;
     color: $color-pallette-white !important;
+    min-height: $header-height * 1px;
 
     .header-content {
         display: flex;
@@ -138,6 +142,11 @@ body {
                 padding: 0 5px;
             }
 
+            .theme-switch {
+                display: flex;
+                justify-content: center;
+            }
+
             .MuiListItem-root {
                 &.Mui-selected {
                     background-color: $color-pallette-dark-blue;
@@ -195,6 +204,7 @@ body {
     color: white;
     font-size: 8px;
     background-color: $color-pallette-dark-background-2;
+    height: $copyright-height * 1px;
     
     .c-content {
         display: flex;
